--- a/src/scss/components/article.scss
+++ b/src/scss/components/article.scss
@@ -1,4 +1,5 @@
 @import "../variables";
+@import "../mixins";
 
 
 .article {
@@ -15,7 +16,7 @@
 			content: '';
 		}
 		p {
-			margin: 0 0 3px 2px;
+			margin: 0 0 3px 0;
 			font-size: 0;
 			color: #888;
 			span {
@@ -24,7 +25,7 @@
 				&:before {
 					content: '/';
 					display: inline-block;
-					margin: 0 5px;
+					margin: 0 2px 0 0;
 				}
 				&:first-child:before {
 					display: none;
@@ -70,7 +71,9 @@
 			cursor: pointer;
 			border-radius: 0;
 			background: none;
-			outline: none;
+			&:focus {
+				outline: $border-focus;
+			}
 			em {
 				display: block;
 				margin: 6px 0 0;
@@ -277,7 +280,6 @@
 			width: 20px;
 		}
 	}
-	.external-control {}
 	.close {
 		display: none;
 		position: fixed;
@@ -305,6 +307,8 @@
 		}
 	}
 
+
+	// media query
 	@media screen and (max-width: 1200px) {
 		.direction {
 			$offset: -25px;
@@ -380,6 +384,9 @@
 				}
 			}
 			&:active {
+				&:before {
+					background: mix(#000, $color-key, 10%);
+				}
 				.close__ico {
 					&-mobile {
 						transform: scale(1.8);
@@ -396,6 +403,22 @@
 		}
 	}
 
+
+	// touch mode
+	.touch & {
+		&__control {
+			.onLike {
+				outline: none;
+				@include disable-touchable-button();
+			}
+		}
+		.close {
+			@include disable-touchable-button();
+			&:focus {
+				outline: none;
+			}
+		}
+	}
 }
 
 
@@ -416,5 +439,15 @@
 	@media screen and (max-width: $size-mobile) {
 		padding-top: 20px;
 		padding-bottom: 25px;
+
+		&__header {
+			padding: 0 0 15px;
+			border-bottom: 1px solid #E6E6E6;
+		}
+		&__body {
+			margin: 30px auto 20px;
+		}
 	}
 }
+
+
