--- a/src/scss/mixins.scss
+++ b/src/scss/mixins.scss
@@ -2,7 +2,8 @@
 
 
 // flex
-@mixin d-flex($align-items:null, $justify-content:null) {
+@mixin d-flex($align-items:null, $justify-content:null)
+{
 	display: -webkit-flex;
 	display: flex;
 	@if ($align-items) {
@@ -14,7 +15,19 @@
 		justify-content: $justify-content;
 	}
 }
-@mixin flex($flex:1) {
+@mixin flex($flex:1)
+{
 	-webkit-flex: $flex;
 	flex: $flex;
+}
+
+
+// disable touchable button
+@mixin disable-touchable-button()
+{
+	-moz-user-select: none;
+	-ms-user-select: none;
+	-webkit-user-select: none;
+	-webkit-touch-callout: none;
+	-webkit-tap-highlight-color: rgba(0,0,0,0);
 }
