--- a/src/scss/components/index.scss
+++ b/src/scss/components/index.scss
@@ -40,7 +40,6 @@
 			font-weight: 600;
 		}
 	}
-	&__categories {}
 	&__articlesWrap {
 		overflow: hidden;
 	}
@@ -127,15 +126,20 @@
 
 	// empty article
 	.empty-article {
-		p {
-			margin: 0;
+		background: #fff;
+		&__wrap {
 			padding: 10vh 0;
-			background: #fff;
-			font-size: 24px;
+		}
+		img {
+			display: block;
+			margin: 0 auto;
+		}
+		p {
+			margin: 15px 0 0;
+			font-size: 13px;
 			text-align: center;
-			font-weight: 600;
-			color: $color-key;
-			letter-spacing: -.5px;
+			font-weight: 500;
+			color: #111;
 		}
 	}
 
@@ -179,7 +183,6 @@
 			}
 		}
 	}
-
 
 	// media query
 	@media screen and (min-width: 1260px) {
@@ -315,6 +318,17 @@
 				height: 54px;
 			}
 		}
+		.empty-article {
+			&__wrap {
+				padding: 12vh 0;
+			}
+			img {
+				width: 60px;
+			}
+			p {
+				margin: 10px 0 0;
+			}
+		}
 	}
 	@media screen and (max-width: 550px) {
 		$item-size: 140px;
@@ -383,7 +397,6 @@
 			margin-top: -2px;
 		}
 	}
-
 
 	// touch mode
 	.touch & {
