--- a/src/scss/mixins.scss
+++ b/src/scss/mixins.scss
@@ -31,3 +31,12 @@
 	-webkit-touch-callout: none;
 	-webkit-tap-highlight-color: rgba(0,0,0,0);
 }
+
+
+// prefix
+@mixin prefix($key, $value)
+{
+	-ms-#{$key}: $value;
+	-webkit-#{$key}: $value;
+	#{$key}: $value;
+}
