왼쪽 오른쪽 버튼 클릭 씹힘현상이 보여 애니메이션 변경

--- a/src/scss/components/article.scss
+++ b/src/scss/components/article.scss
@@ -288,18 +288,15 @@
 			&:focus {
 				outline: $border-focus;
 			}
+			&:active {
+				@include prefix(transform, scale(1.2));
+			}
 		}
 		&-prev {
 			left: 0 - $offset;
-			> a:active {
-				@include prefix(transform, translateX(-8px));
-			}
 		}
 		&-next {
 			right: 50px - $offset;
-			> a:active {
-				@include prefix(transform, translateX(8px));
-			}
 		}
 		> img {
 			display: block;
