--- a/src/scss/components/article.scss
+++ b/src/scss/components/article.scss
@@ -301,6 +301,7 @@
 		> img {
 			display: block;
 			width: 20px;
+			pointer-events: none;
 		}
 	}
 	.close {
@@ -315,9 +316,11 @@
 		background: none;
 		cursor: pointer;
 		border-radius: 0;
+
 		&__ico {
 			-webkit-transition: -webkit-transform .3s cubic-bezier(.24,1.35,.8,1.22);
 			transition: transform .3s cubic-bezier(.24,1.35,.8,1.22);
+			pointer-events: none;
 			&-pc {
 				display: block;
 				width: 24px;
