모바일에서 메뉴 토글 인터랙션 css 수정

--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -264,6 +264,17 @@
 				span:after {
 					@include prefix(transform, scale(1.2) translateX(0) translateY(0) rotate(-135deg));
 				}
+				&:active {
+					span:before {
+						@include prefix(transform, scale(1.15) translateX(0) translateY(0) rotate(120deg));
+					}
+					i {
+						@include prefix(transform, scaleX(0) translateY(0));
+					}
+					span:after {
+						@include prefix(transform, scale(1.15) translateX(0) translateY(0) rotate(-120deg));
+					}
+				}
 			}
 		}
 	}
