스타일 조정

--- a/src/scss/components/index.scss
+++ b/src/scss/components/index.scss
@@ -308,7 +308,7 @@
 			}
 		}
 		.articles {
-			margin-top: 18px;
+			margin-top: 2px;
 		}
 		.loadMore {
 			margin: 30px 0 0;
@@ -392,6 +392,9 @@
 			> h1 {
 				margin-left: 15px;
 			}
+		}
+		.categories {
+			margin-bottom: 4px;
 		}
 		.articles {
 			margin-top: -2px;
