--- a/src/scss/components/article.scss
+++ b/src/scss/components/article.scss
@@ -11,7 +11,8 @@
 	padding: 0 $wrap-padding;
 
 	&__header {
-		text-align: left;
+		text-align: center;
+		padding-top: 10px;
 		&:after {
 			content: '';
 		}
@@ -34,14 +35,14 @@
 		}
 		h1 {
 			margin: 0;
-			font-size: 40px;
+			font-size: 32px;
 			font-weight: 200;
 			letter-spacing: -1px;
-			line-height: 1.1;
+			line-height: 1.2;
 		}
 	}
 	&__body {
-		margin: 40px auto;
+		margin: 30px auto 40px;
 		> *:first-child {
 			margin-top: 0 !important;
 			> *:first-child {
@@ -362,10 +363,10 @@
 		}
 	}
 	@media screen and (max-width: $size-mobile) {
-		padding: 30px 15px 0;
+		padding: 15px 15px 0;
 
 		&__header {
-			text-align: center;
+			padding-top: 0;
 			p {
 				font-size: 11px;
 			}
@@ -388,10 +389,6 @@
 			}
 		}
 
-		.article-body-basic,
-		.article-body-markdown {
-			//font-size: 15px;
-		}
 		.close {
 			$size: 56px;
 			$ratio: 1.4;
@@ -475,11 +472,11 @@
 
 // for popup
 .popupArticle .article {
-	padding-top: 35px;
+	padding-top: 30px;
 	padding-bottom: 52px;
 
 	&__header {
-		text-align: center;
+		padding-top: 20px;
 	}
 	&__empty {
 		position: absolute;
