--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -16,6 +16,7 @@ $color-panel-bg: #ecedef;
 $size-mobile: 640px;
 $size-tablet: 768px;
 $size-article: 900px;
+$size-mobile-header-height: 52px;
 
 
 // border
