--- a/src/scss/components/article.scss
+++ b/src/scss/components/article.scss
@@ -270,6 +270,27 @@
 		.text-right {
 			text-align: right;
 		}
+
+		iframe {
+			display: block;
+			margin: 1.5rem auto;
+			max-width: 100%;
+		}
+		.iframe {
+			margin: 1.5rem 0;
+			position: relative;
+			padding-bottom: 56.25%; /*16:9*/
+			height: 0;
+			overflow: hidden;
+			iframe {
+				position: absolute;
+				top:0;
+				left: 0;
+				width: 100%;
+				height: 100%;
+				margin: 0;
+			}
+		}
 	}
 	.direction {
 		$offset: 30px;
