--- a/assets/css/libs/mixins.scss
+++ b/assets/css/libs/mixins.scss
@@ -3,22 +3,18 @@
 // responsive
 @mixin responsive($range)
 {
-	@if $range == tablet
+	@if $range == mini
 	{
-		@media (max-width: #{$size-screen-tablet}) { @content; }
+		@media (min-width: #{$size-screen-mini}) { @content; }
 	}
-	@else if $range == mobile
+	@else if $range == tablet
 	{
-		@media (max-width: #{$size-screen-mobile}) { @content; }
-	}
-	@else if $range == min
-	{
-		@media (max-width: #{$size-screen-min - 1}) { @content; }
+		@media (min-width: #{$size-screen-tablet}) { @content; }
 	}
 	// 768 ~ 1000
 	@else if $range == desktop
 	{
-		@media (max-width: #{$size-screen-desktop}) { @content; }
+		@media (min-width: #{$size-screen-desktop}) { @content; }
 	}
 	@else if $range == desktop-large
 	{
@@ -27,6 +23,10 @@
 	@else if $range == max
 	{
 		@media (min-width: #{$size-screen-max}) { @content; }
+	}
+	@else if $range == over
+	{
+		@media (min-width: #{$size-screen-over}) { @content; }
 	}
 }
 
