--- a/assets/css/libs/valiables.scss
+++ b/assets/css/libs/valiables.scss
@@ -6,11 +6,12 @@ $color-bg: #fafbfc;
 
 // size
 $size-screen-min: 320px;
-$size-screen-mobile: 640px;
+$size-screen-mini: 640px;
 $size-screen-tablet: 768px;
 $size-screen-desktop: 1000px;
 $size-screen-desktop-large: 1280px;
 $size-screen-max: 1440px;
+$size-screen-over: 1920px;
 
 $size-container-base: 980px;
 
