--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -29,6 +29,6 @@ samp {
 
 @import "./layout";
 @import "./index";
-@import "./detail";
+@import "./work";
 @import "./about";
 @import "./loading";
