--- a/assets/css/layout.scss
+++ b/assets/css/layout.scss
@@ -36,7 +36,7 @@
 						display: flex;
 						align-items: center;
 						padding: 14px 8px;
-						font-size: .8125rem;
+						font-size: .75rem;
 						text-decoration: none;
 						color: $color-text-base;
 						font-weight: 600;
@@ -107,7 +107,7 @@
 				position: relative;
 				z-index: 2;
 				display: block;
-				padding: 0 4px;
+				padding: 0 10px;
 			}
 			img {
 				display: block;
@@ -130,6 +130,7 @@
 					> li {
 						> a {
 							padding: 15px 15px;
+							font-size: .8125rem;
 						}
 					}
 				}
@@ -172,14 +173,22 @@
 	}
 	&__copyright {
 		margin: 0;
-		font-size: .6875rem;
+		font-size: .625rem;
 		font-style: italic;
 	}
 
+	@include responsive(tablet) {
+		&__copyright {
+			font-size: .6875rem;
+		}
+	}
 	@include responsive(desktop) {
-		margin: 50px 0 0;
+		margin: 60px 0 0;
+		&__wrap {
+			padding: 0 0 30px;
+		}
 	}
 	@include responsive(desktop-large) {
-		margin: 60px 0 0;
+		margin: 70px 0 0;
 	}
 }
