--- a/assets/css/work.scss
+++ b/assets/css/work.scss
@@ -3,6 +3,9 @@
 
 // work
 .work {
+	&--hide {
+		opacity: 0;
+	}
 	&__wrap {
 		max-width: $size-container-base;
 		margin: 0 auto;
@@ -22,7 +25,7 @@
 
 	@include responsive(mini) {
 		&__header {
-			margin: 50px 0 0;
+			margin: 40px 0 0;
 		}
 		&__body {
 			margin: 30px 0 0;
@@ -34,7 +37,7 @@
 	@include responsive(desktop) {
 		padding: 0 60px;
 		&__header {
-			margin: 70px 0 0;
+			margin: 60px 0 0;
 		}
 		&__body {
 			margin: 40px 0 0;
@@ -125,6 +128,18 @@
 		margin: 2rem -1rem 1rem;
 		> img {
 			margin: 0 auto;
+		}
+	}
+	// TODO: 안쓸거지만 임시방편으로... 나중에 삭제예정
+	figure {
+		margin: 0;
+	}
+	h1, h2, h3 {
+		& + * > .image:first-child,
+		& + * > img:first-child,
+		& + .image,
+		& + img {
+			margin-top: 1rem;
 		}
 	}
 	blockquote {
@@ -267,6 +282,7 @@
 // like
 .workLike {
 	text-align: center;
+	padding: 0 0 20px;
 	button {
 		display: block;
 		margin: 0 auto;
@@ -275,7 +291,6 @@
 		cursor: pointer;
 		border-radius: 0;
 		background: none;
-		outline: none;
 		-webkit-tap-highlight-color: transparent;
 		user-select: none;
 
@@ -326,9 +341,4 @@
 			}
 		}
 	}
-}
-
-// close
-.workClose {
-
 }
