디테일 인터랙션 마무리, about페이지 작업중..

--- a/assets/css/layout.scss
+++ b/assets/css/layout.scss
@@ -43,6 +43,7 @@
 					}
 					> div {
 						position: relative;
+						height: 0;
 					}
 					&:focus-within,
 					&:hover {
@@ -60,7 +61,7 @@
 				}
 			}
 			ol {
-				position: fixed;
+				position: absolute;
 				z-index: 2;
 				top: 45px;
 				left: 10px;
