--- a/assets/css/layout.scss
+++ b/assets/css/layout.scss
@@ -9,6 +9,10 @@
 	right: 0;
 	top: 0;
 	background: rgba($color-bg,.9);
+	@supports (backdrop-filter: blur(5px)) {
+		background: rgba($color-bg,.65);
+		backdrop-filter: blur(8px);
+	}
 	&:after {
 		content: '';
 		display: block;
@@ -17,7 +21,8 @@
 		right: 0;
 		bottom: 0;
 		height: 1px;
-		background: #ddd;
+		background: #000;
+		opacity: .1;
 	}
 
 	&__wrap {
@@ -61,7 +66,7 @@
 				}
 			}
 			ol {
-				position: absolute;
+				position: fixed;
 				z-index: 2;
 				top: 45px;
 				left: 10px;
@@ -108,7 +113,7 @@
 				position: relative;
 				z-index: 2;
 				display: block;
-				padding: 0 10px;
+				padding: 0 8px;
 			}
 			img {
 				display: block;
