--- a/assets/css/layout.scss
+++ b/assets/css/layout.scss
@@ -3,7 +3,10 @@
 
 // header
 .header {
-	position: sticky;
+	position: relative;
+	@supports (position: sticky) {
+		position: sticky;
+	}
 	z-index: 10;
 	left: 0;
 	right: 0;
@@ -11,7 +14,7 @@
 	background: rgba($color-bg,.9);
 	@supports (backdrop-filter: blur(5px)) {
 		background: rgba($color-bg,.65);
-		backdrop-filter: blur(8px);
+		backdrop-filter: blur(15px);
 	}
 	&:after {
 		content: '';
@@ -40,7 +43,7 @@
 					> a {
 						display: flex;
 						align-items: center;
-						padding: 14px 8px;
+						padding: 18px 8px;
 						font-size: .75rem;
 						text-decoration: none;
 						color: $color-text-base;
@@ -68,7 +71,7 @@
 			ol {
 				position: fixed;
 				z-index: 2;
-				top: 45px;
+				top: 50px;
 				left: 10px;
 				right: 10px;
 				margin: 0;
@@ -119,6 +122,7 @@
 				display: block;
 				margin: 0;
 				width: 44px;
+				height: 36px;
 			}
 		}
 	}
@@ -135,7 +139,7 @@
 				ul {
 					> li {
 						> a {
-							padding: 15px 15px;
+							padding: 16px 15px;
 							font-size: .8125rem;
 						}
 					}
@@ -146,8 +150,9 @@
 					padding: 0 20px;
 				}
 				img {
-					margin: 0 0 -30px;
+					margin: 0 0 -28px;
 					width: 80px;
+					height: 65px;
 				}
 			}
 		}
@@ -167,7 +172,11 @@
 }
 
 // container
-.container {}
+.container {
+	@include responsive(mini) {
+		padding: 24px 0 0;
+	}
+}
 
 // footer
 .footer {
