마무리를 위한 자잘한 수정
- ie11 관련 대응
- 순간적으로 로고쪽에 제목이 노출되어서 글자 사이즈 줄여서 안보이게 하기

--- a/assets/css/work.scss
+++ b/assets/css/work.scss
@@ -298,6 +298,7 @@
 			display: block;
 			margin: 0 auto;
 			width: 28px;
+			height: 28px;
 			transition: transform .3s cubic-bezier(.24, 1.35, .8, 1.22);
 			path {
 				fill: $color-key;
@@ -338,6 +339,7 @@
 		button {
 			svg {
 				width: 32px;
+				height: 32px;
 			}
 		}
 	}
