테스트하면서 수정한것들..

--- a/assets/css/libs/valiables.scss
+++ b/assets/css/libs/valiables.scss
@@ -5,6 +5,7 @@ $color-bg: #fafbfc;
 
 
 // size
+$size-header-height-small: 54px;
 $size-screen-min: 320px;
 $size-screen-mini: 640px;
 $size-screen-tablet: 768px;
