--- a/assets/css/layout.scss
+++ b/assets/css/layout.scss
@@ -1,20 +1,33 @@
 @import "./libs/valiables";
 @import "./libs/mixins";
 
+body {
+	&:before {
+		content: '';
+		display: block;
+		height: $size-header-height-small;
+	}
+}
 // header
 .header {
-	position: relative;
-	@supports (position: sticky) {
-		position: sticky;
-	}
+	position: fixed;
 	z-index: 10;
 	left: 0;
 	right: 0;
 	top: 0;
-	background: rgba($color-bg,.9);
-	@supports (backdrop-filter: blur(5px)) {
-		background: rgba($color-bg,.65);
-		backdrop-filter: blur(15px);
+	height: $size-header-height-small;
+	&:before {
+		content: '';
+		position: absolute;
+		left: 0;
+		right: 0;
+		top: 0;
+		bottom: 0;
+		background: rgba($color-bg,.9);
+		@supports (backdrop-filter: blur(15px)) {
+			background: rgba($color-bg,.65);
+			backdrop-filter: blur(15px);
+		}
 	}
 	&:after {
 		content: '';
@@ -29,21 +42,26 @@
 	}
 
 	&__wrap {
+		position: relative;
 		display: flex;
 		align-items: center;
 		justify-content: center;
+		height: 100%;
 		nav {
 			flex: 1;
+			height: 100%;
 			ul {
 				margin: 0;
 				padding: 0;
 				list-style: none;
 				display: flex;
+				height: 100%;
 				> li {
 					> a {
 						display: flex;
 						align-items: center;
-						padding: 18px 8px;
+						height: 100%;
+						padding: 0 10px;
 						font-size: .75rem;
 						text-decoration: none;
 						color: $color-text-base;
@@ -140,7 +158,7 @@
 				ul {
 					> li {
 						> a {
-							padding: 16px 15px;
+							padding: 0 15px;
 							font-size: .8125rem;
 						}
 					}
