--- a/assets/css/libs/valiables.scss
+++ b/assets/css/libs/valiables.scss
@@ -5,7 +5,8 @@ $color-bg: #fafbfc;
 
 
 // size
-$size-header-height-small: 54px;
+$size-header-height-min: 54px;
+$size-header-height-mini: 48px;
 $size-screen-min: 320px;
 $size-screen-mini: 640px;
 $size-screen-tablet: 768px;
