--- a/assets/css/layout.scss
+++ b/assets/css/layout.scss
@@ -5,7 +5,12 @@ body {
 	&:before {
 		content: '';
 		display: block;
-		height: $size-header-height-small;
+		height: $size-header-height-min;
+	}
+	@include responsive(mini) {
+		&:before {
+			height: $size-header-height-mini;
+		}
 	}
 }
 // header
@@ -15,7 +20,7 @@ body {
 	left: 0;
 	right: 0;
 	top: 0;
-	height: $size-header-height-small;
+	height: $size-header-height-min;
 	&:before {
 		content: '';
 		position: absolute;
@@ -153,6 +158,7 @@ body {
 		}
 	}
 	@include responsive(mini) {
+		height: $size-header-height-mini;
 		&__wrap {
 			nav {
 				ul {
@@ -163,6 +169,12 @@ body {
 						}
 					}
 				}
+				ol {
+					position: absolute;
+					left: -3px;
+					top: -4px;
+					right: auto;
+				}
 			}
 			h1 {
 				a {
@@ -172,18 +184,6 @@ body {
 					margin: 0 0 -28px;
 					width: 80px;
 					height: 65px;
-				}
-			}
-		}
-	}
-	@include responsive(tablet) {
-		&__wrap {
-			nav {
-				ol {
-					position: absolute;
-					left: -3px;
-					top: -4px;
-					right: auto;
 				}
 			}
 		}
