--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -209,6 +209,7 @@
 			figure {
 				position: relative;
 				margin: 0;
+				width: 100%;
 				height: 54vw;
 				overflow: hidden;
 				background: #fff;
@@ -220,7 +221,8 @@
 					width: 100%;
 					transform: translate(-50%, -50%);
 					@supports (object-fit: cover) {
-						position: static;
+						left: 0;
+						top: 0;
 						width: 100%;
 						height: 100%;
 						object-fit: cover;
@@ -280,8 +282,26 @@
 				li {
 					width: 33.3333%;
 				}
+				a {
+					&:hover {
+						figure {
+							img {
+								transform: scale(1.1);
+							}
+						}
+					}
+				}
 				figure {
+					box-sizing: border-box;
 					height: 20vw;
+					overflow: hidden;
+					transform: translateZ(0);
+				img {
+						transition: transform 300ms ease-out;
+						transform-origin: 50% 50%;
+						image-rendering: crisp-edges;
+						backface-visibility: hidden;
+					}
 				}
 			}
 		}
