--- a/assets/scss/layout.scss
+++ b/assets/scss/layout.scss
@@ -1,27 +1,6 @@
 @import "./libs/valiables";
 @import "./libs/mixins";
 
-html {
-	&.not-scroll {
-		body {
-			position: fixed;
-		}
-		&, body {
-			overflow: hidden;
-		}
-	}
-
-	@include responsive(tablet) {
-		&.not-scroll {
-			body {
-				position: initial;
-			}
-			&, body {
-				overflow: initial;
-			}
-		}
-	}
-}
 main {
 	&:before {
 		content: '';
@@ -53,6 +32,7 @@ main {
 // header
 .layout-header {
 	$self: '.layout-header';
+
 	z-index: 3;
 	position: fixed;
 	left: 0;
@@ -105,6 +85,9 @@ main {
 			cursor: pointer;
 			&:active {
 				background: #f4f4f4;
+				@supports (backdrop-filter: blur(15px)) {
+					background: rgba(#f4f4f4, .75);
+				}
 			}
 			img {
 				position: absolute;
@@ -148,24 +131,28 @@ main {
 				left: 0;
 				right: 0;
 				top: $size-header-height;
-				height: calc(100vh - #{$size-header-height});
-				background: $color-key;
 				box-sizing: border-box;
-				padding: 50px $size-side-padding 30px;
-				overflow: auto;
-				-webkit-overflow-scrolling: touch;
+				padding: 24px $size-side-padding 30px;
+				background: $color-key;
+				@include color-linear-gradient($color-key, #CC5B40, #7B2A79);
+				box-shadow: 0 2px 10px rgba(0,0,0,.5);
+				@supports (backdrop-filter: blur(15px)) {
+					background: rgba($color-key, .8);
+					backdrop-filter: blur(15px);
+					box-shadow: 0 2px 10px rgba(0,0,0,.3);
+				}
 				ul {
 					margin: 0;
 					padding: 0;
 					list-style: none;
 					> li {
 						&:nth-child(n+2) {
-							margin-top: 30px;
+							margin-top: 15px;
 						}
 						> a {
 							display: block;
 							font-family: $font-circular;
-							font-size: 30px;
+							font-size: 18px;
 							font-weight: 600;
 							color: #fff;
 							text-decoration: none;
@@ -186,12 +173,12 @@ main {
 					}
 					a {
 						display: block;
-						padding: 6px 15px 6px 0;
+						padding: 4px 15px 4px 0;
 						box-sizing: border-box;
 						color: #fff;
 						font-family: $font-circular;
 						line-height: 1.42;
-						font-size: 15px;
+						font-size: 13px;
 						font-weight: 400;
 						text-decoration: none;
 						&:active {
@@ -240,6 +227,7 @@ main {
 			margin: 0 -4px 0 0;
 			padding: 0;
 			overflow: visible;
+			box-shadow: 0 0 0;
 			ul {
 				display: flex;
 				align-items: center;
