--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -212,7 +212,7 @@
 				width: 100%;
 				height: 72vw;
 				overflow: hidden;
-				background: #fff;
+				background: #f1f1f1;
 				img {
 					position: absolute;
 					left: 50%;
@@ -286,7 +286,10 @@
 					&:hover {
 						figure {
 							img {
-								transform: scale(1.1);
+								transform: scale(1.1) translate(-45%, -45%);
+								@supports (object-fit: cover) {
+									transform: scale(1.1);
+								}
 							}
 						}
 					}
