디자인 수정
- pwa 앱 모드일때 뒤로가기 버튼 추가
- 휴대폰 가로모드일때 메뉴 3컬럼으로 나오게하기

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -10,6 +10,7 @@ body {
 	color: $color-text-base;
 	text-size-adjust: 100%;
 	background: $color-bg;
+	-webkit-touch-callout: none;
 }
 
 body, button, input, textarea, select {
