--- a/assets/scss/detail.scss
+++ b/assets/scss/detail.scss
@@ -27,29 +27,29 @@
 			margin: 2px 0 0;
 			padding: 0 20px;
 			font-weight: 600;
-			font-size: 1.5rem;
+			font-size: 1.75rem;
 			letter-spacing: -1px;
 			line-height: 1.2;
 		}
 	}
 	&__body {
 		margin: 20px 0 0;
-		font-size: .875rem;
-		line-height: 1.5;
+		font-size: 1rem;
+		line-height: 1.62;
 
 		& {
 			h1, h2, h3, h4, h5, h6 {
 				line-height: 1.25;
 				font-weight: 600;
 			}
-			h1, h2, h3 { margin: 2rem 0 1rem; }
-			h4, h5, h6 { margin: 1.5rem 0 1rem; }
-			h1 { font-size: 1.75rem; }
-			h2 { font-size: 1.5rem; }
-			h3 { font-size: 1.25rem; }
-			h4 { font-size: 1rem; }
-			h5 { font-size: .9375rem; }
-			h6 { font-size: .875rem; }
+			h1, h2, h3 { margin: 2.5rem 0 1.5rem; }
+			h4, h5, h6 { margin: 1.75rem 0 1rem; }
+			h1 { font-size: 2rem; }
+			h2 { font-size: 1.75rem; }
+			h3 { font-size: 1.5rem; }
+			h4 { font-size: 1.25rem; }
+			h5 { font-size: 1rem; }
+			h6 { font-size: .9375rem; }
 			p { margin: 1rem 0; }
 			ul, ol {
 				margin: 1rem 0;
@@ -60,15 +60,12 @@
 			}
 			img {
 				display: block;
-				max-width: 100%;
-				margin: 3rem auto 1.5rem;
-			}
-			.image {
-				display: block;
-				margin: 3rem -#{$size-side-padding} 1.5rem;
-				> img {
-					margin: 0 auto;
-				}
+				position: relative;
+				left: 50%;
+				margin: 3.25rem 0 1.75rem;
+				max-width: 100vw;
+				transform: translateX(-50%);
+				transform-origin: 50% 50%;
 			}
 			h1, h2, h3 {
 				& + * > .image:first-child,
@@ -130,7 +127,7 @@
 				padding: 3px 5px;
 				border-radius: 2px;
 				background: mix(#e8e9eb, #fff, 75%);
-				font-size: .75rem;
+				font-size: 90%;
 				color: #e96900;
 			}
 			pre {
@@ -193,15 +190,9 @@
 				}
 			}
 		}
-
-		@include retina() {
-			img {
-				zoom: .75;
-			}
-		}
 	}
 	&__like {
-		margin: 30px 0 0;
+		margin: 40px 0 0;
 		text-align: center;
 		button {
 			display: block;
@@ -292,7 +283,7 @@
 		padding: 0 $size-side-padding-desktop;
 
 		&__wrap {
-			max-width: $size-screen-desktop;
+			max-width: 768px;
 			margin: 0 auto;
 		}
 		&__header {
@@ -308,9 +299,13 @@
 		&__body {
 			margin: 30px 0 0;
 			& {
-				.image {
-					margin-left: -#{$size-side-padding-desktop};
-					margin-right: -#{$size-side-padding-desktop};
+				img {
+					max-width: 100vw;
+				}
+				@include retina() {
+					img {
+						zoom: .75;
+					}
 				}
 			}
 		}
