--- a/assets/scss/layout.scss
+++ b/assets/scss/layout.scss
@@ -1,6 +1,9 @@
 @import "./libs/valiables";
 @import "./libs/mixins";
 
+body {
+	overflow-x: hidden;
+}
 main {
 	&:before {
 		content: '';
@@ -27,68 +30,6 @@ main {
 	height: 1px;
 	opacity: .01;
 	overflow: hidden;
-}
-
-// page back button
-.page-back-button {
-	display: none;
-
-	@media all and (display-mode: standalone) {
-		display: block;
-		position: fixed;
-		z-index: 2;
-		left: 0;
-		bottom: 0;
-		width: 72px;
-		height: 72px;
-		padding: 0;
-		margin: 0;
-		border: none;
-		cursor: pointer;
-		font-size: 0;
-		box-sizing: border-box;
-		user-select: none;
-		-webkit-tap-highlight-color: transparent;
-		background: transparent;
-		outline: none;
-		.bg {
-			position: absolute;
-			left: 0;
-			bottom: 0;
-			display: block;
-			width: 62px;
-			height: 62px;
-			box-sizing: border-box;
-			transform-origin: 0 100%;
-			transition: transform 150ms ease-out;
-			path {
-				color: $color-key;
-				transition: color 150ms ease-out;
-			}
-		}
-		.icon {
-			display: block;
-			position: absolute;
-			left: 6px;
-			bottom: 6px;
-			width: 28px;
-			height: 28px;
-			box-sizing: border-box;
-			transition: transform 150ms ease-out;
-			transform-origin: 50% 50%;
-		}
-		&:active {
-			.bg {
-				transform: scale(.85, .85);
-				path {
-					color: mix($color-sub, $color-key, 50%);
-				}
-			}
-			.icon {
-				transform: scale(.75, .75) translate(-6px, 6px);
-			}
-		}
-	}
 }
 
 // header
