디테일 페이지 이미지 사이즈 조정

--- a/assets/scss/detail.scss
+++ b/assets/scss/detail.scss
@@ -310,6 +310,11 @@
 		}
 	}
 	@include responsive(desktop) {
+		&__body {
+			img {
+				max-width: 90vw;
+			}
+		}
 		@include retina() {
 			&__body {
 				img {
