--- a/assets/scss/detail.scss
+++ b/assets/scss/detail.scss
@@ -64,6 +64,7 @@
 				left: 50%;
 				margin: 3.25rem 0 1.75rem;
 				max-width: 100vw;
+				max-height: 1240px;
 				transform: translateX(-50%);
 				transform-origin: 50% 50%;
 			}
