--- a/assets/scss/detail.scss
+++ b/assets/scss/detail.scss
@@ -121,13 +121,9 @@
 				word-break: break-all;
 			}
 			code {
-				margin: 0 2px;
-				white-space: nowrap;
-				padding: 3px 5px;
-				border-radius: 2px;
-				background: mix(#e8e9eb, #fff, 75%);
-				font-size: 90%;
-				color: #e96900;
+				word-break: break-word;
+				font-size: 87.5%;
+				color: #007bff;
 			}
 			pre {
 				margin: 1rem 0;
