--- a/assets/scss/detail.scss
+++ b/assets/scss/detail.scss
@@ -139,6 +139,7 @@
 					white-space: pre;
 					border-radius: 0;
 					color: #222;
+					font-size: .8125rem;
 				}
 			}
 			input[type=checkbox] {
