--- a/assets/scss/libs/valiables.scss
+++ b/assets/scss/libs/valiables.scss
@@ -3,6 +3,10 @@ $color-text-base: #222;
 $color-key: #b31f37;
 $color-bg: #fafbfc;
 $color-sub: #380AEF;
+$color-dark-text-base: #d4d4d4;
+$color-dark-key: #d7202b;
+$color-dark-bg: #222;
+$color-dark-sub: #826cef;
 
 
 // size
