--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -2,432 +2,491 @@
 @import "./libs/mixins";
 
 .index {
-	margin: 40px 0 0;
+  margin: 40px 0 0;
 
-	&__header {
-		margin: 0 0 20px;
-		> h2 {
-			margin: 0;
-			text-align: center;
-			font-family: $font-circular;
-			font-size: 24px;
-			line-height: 1.15;
-			letter-spacing: -1px;
-			font-weight: 600;
-		}
+  &__header {
+    margin: 0 0 20px;
+    > h2 {
+      margin: 0;
+      text-align: center;
+      font-family: $font-circular;
+      font-size: 24px;
+      line-height: 1.15;
+      letter-spacing: -1px;
+      font-weight: 600;
+    }
 
-		@include responsive(tablet) {
-			> h2 {
-				font-size: 36px;
-				letter-spacing: -1.5px;
-			}
-		}
-	}
-	&__categories {
-		margin: 15px 0 -20px;
-		button {
-			width: 100%;
-			display: block;
-			box-sizing: border-box;
-			margin: 0;
-			padding: 0 20px;
-			border: none;
-			background: none;
-			background: #eee;
-			cursor: pointer;
-			-webkit-tap-highlight-color: transparent;
-			&:active {
-				opacity: .75;
-			}
-			span {
-				display: flex;
-				align-items: center;
-				justify-content: space-between;
-				height: 44px;
-				box-sizing: border-box;
-			}
-			em {
-				display: flex;
-				font-family: $font-circular;
-				font-size: .875rem;
-				font-weight: 500;
-				font-style: normal;
-			}
-			img {
-				display: block;
-				margin-right: 3px;
-				width: 12px;
-				height: 6px;
-				transition: transform 300ms ease-out;
-			}
-		}
-		nav {
-			display: none;
-		}
-		&.open {
-			button {
-				background: #ddd;
-				img {
-					transform: scaleY(-1);
-				}
-			}
-			nav {
-				display: block;
-				background: #f4f4f4;
-				padding: 15px 0;
-				ul {
-					display: flex;
-					margin: 0;
-					padding: 0;
-					list-style: none;
-					flex-wrap: wrap;
-					box-sizing: border-box;
-				}
-				li {
-					width: 50%;
-					font-size: 0;
-					&.on {
-						a {
-							color: $color-key;
-							&:active {
-								opacity: 1;
-							}
-						}
-					}
-				}
-				a {
-					display: block;
-					padding: 8px 20px;
-					font-family: $font-circular;
-					font-size: .8125rem;
-					font-weight: 400;
-					color: $color-text-base;
-					text-decoration: none;
-					box-sizing: border-box;
-					letter-spacing: -.25px;
-					-webkit-tap-highlight-color: transparent;
-					&:active {
-						opacity: .5;
-					}
-				}
-				em {
-					font-style: normal;
-					&:before {
-						content: '(';
-					}
-					&:after {
-						content: ')';
-					}
-				}
-			}
-		}
+    @include responsive(tablet) {
+      > h2 {
+        font-size: 36px;
+        letter-spacing: -1.5px;
+      }
+    }
+  }
+  &__categories {
+    margin: 15px 0 -20px;
+    button {
+      width: 100%;
+      display: block;
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0 20px;
+      border: none;
+      background: none;
+      background: #eee;
+      cursor: pointer;
+      -webkit-tap-highlight-color: transparent;
+      &:active {
+        opacity: .75;
+      }
+      span {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        height: 44px;
+        box-sizing: border-box;
+      }
+      em {
+        display: flex;
+        font-family: $font-circular;
+        font-size: .875rem;
+        font-weight: 500;
+        font-style: normal;
+      }
+      svg {
+        display: block;
+        margin-right: 3px;
+        width: 12px;
+        height: 6px;
+        transition: transform 300ms ease-out;
+      }
+    }
+    nav {
+      display: none;
+    }
+    &.open {
+      button {
+        background: #ddd;
+        svg {
+          transform: scaleY(-1);
+        }
+      }
+      nav {
+        display: block;
+        background: #f4f4f4;
+        padding: 15px 0;
+        ul {
+          display: flex;
+          margin: 0;
+          padding: 0;
+          list-style: none;
+          flex-wrap: wrap;
+          box-sizing: border-box;
+        }
+        li {
+          width: 50%;
+          font-size: 0;
+          &.on {
+            a {
+              color: $color-key;
+              &:active {
+                opacity: 1;
+              }
+            }
+          }
+        }
+        a {
+          display: block;
+          padding: 8px 20px;
+          font-family: $font-circular;
+          font-size: .8125rem;
+          font-weight: 400;
+          color: $color-text-base;
+          text-decoration: none;
+          box-sizing: border-box;
+          letter-spacing: -.25px;
+          -webkit-tap-highlight-color: transparent;
+          &:active {
+            opacity: .5;
+          }
+        }
+        em {
+          font-style: normal;
+          &:before {
+            content: '(';
+          }
+          &:after {
+            content: ')';
+          }
+        }
+      }
+    }
 
-		@include responsive(mobile-large) {
-			margin: 10px -#{$size-side-padding} 0;
-			&.open {
-				nav {
-					li {
-						width: 33.33333%;
-					}
-				}
-			}
-		}
-		@include responsive(tablet) {
-			margin: 2px auto 10px;
-			max-width: $size-screen-desktop;
-			button {
-				display: none;
-			}
-			nav {
-				display: block;
-			}
-			nav,
-			&.open nav {
-				background: none;
-				margin: 0;
-				padding: 0;
-				ul {
-					display: flex;
-					margin: 0;
-					padding: 0;
-					list-style: none;
-					flex-wrap: wrap;
-					box-sizing: border-box;
-					justify-content: center;
-				}
-				li {
-					width: auto;
-					&.on {
-						a {
-							color: $color-key;
-							&:active {
-								opacity: 1;
-							}
-							&:hover {
-								text-decoration: none;
-							}
-						}
-					}
-				}
-				a {
-					padding: 0 6px;
-					font-family: $font-circular;
-					font-size: .75rem;
-					font-weight: 400;
-					color: $color-text-base;
-					text-decoration: none;
-					box-sizing: border-box;
-					letter-spacing: -.25px;
-					&:hover {
-						opacity: 1;
-						text-decoration: underline;
-					}
-				}
-				em {
-					font-style: normal;
-					&:before {
-						content: '(';
-					}
-					&:after {
-						content: ')';
-					}
-				}
-			}
-		}
-	}
-	&__works {
-		margin: 0;
-		> ul {
-			margin: 0;
-			padding: 0;
-			list-style: none;
-			display: flex;
-			flex-wrap: wrap;
-			li {
-				width: 100%;
-				padding: 0 0 20px;
-				box-sizing: border-box;
-			}
-			figure {
-				position: relative;
-				margin: 0;
-				width: 100%;
-				height: 72vw;
-				overflow: hidden;
-				background: #f1f1f1;
-				img {
-					position: absolute;
-					left: 50%;
-					top: 50%;
-					display: block;
-					width: 100%;
-					transform: translate(-50%, -50%) scale(1);
-					transform-origin: 50% 50%;
-					transition: transform 200ms ease-out 50ms;
-					@supports (object-fit: cover) {
-						left: 0;
-						top: 0;
-						width: 100%;
-						height: 100%;
-						object-fit: cover;
-						transform: scale(1);
-					}
-				}
-				&:active {
-					img {
-						transform: scale(1.05);
-					}
-				}
-			}
-			div {
-				padding: 12px 20px 0;
-				text-align: center;
-				strong {
-					display: block;
-					font-size: .875rem;
-					color: $color-text-base;
-					font-weight: 600;
-					line-height: 1.25;
-					@include text-single-line();
-				}
-				span {
-					display: block;
-					margin: 1px 0 0;
-					font-family: $font-circular;
-					font-size: .625rem;
-					color: #999;
-					em {
-						font-style: normal;
-						&:nth-child(n+2) {
-							&:before {
-								content: ' / ';
-							}
-						}
-					}
-				}
-			}
-			a {
-				display: block;
-				text-decoration: none;
-				padding: 0 0 10px;
-				-webkit-tap-highlight-color: transparent;
-			}
-		}
+    @include responsive(mobile-large) {
+      margin: 10px -#{$size-side-padding} 0;
+      &.open {
+        nav {
+          li {
+            width: 33.33333%;
+          }
+        }
+      }
+    }
+    @include responsive(tablet) {
+      margin: 2px auto 10px;
+      max-width: $size-screen-desktop;
+      button {
+        display: none;
+      }
+      nav {
+        display: block;
+      }
+      nav,
+      &.open nav {
+        background: none;
+        margin: 0;
+        padding: 0;
+        ul {
+          display: flex;
+          margin: 0;
+          padding: 0;
+          list-style: none;
+          flex-wrap: wrap;
+          box-sizing: border-box;
+          justify-content: center;
+        }
+        li {
+          width: auto;
+          &.on {
+            a {
+              color: $color-key;
+              &:active {
+                opacity: 1;
+              }
+              &:hover {
+                text-decoration: none;
+              }
+            }
+          }
+        }
+        a {
+          padding: 0 6px;
+          font-family: $font-circular;
+          font-size: .75rem;
+          font-weight: 400;
+          color: $color-text-base;
+          text-decoration: none;
+          box-sizing: border-box;
+          letter-spacing: -.25px;
+          &:hover {
+            opacity: 1;
+            text-decoration: underline;
+          }
+        }
+        em {
+          font-style: normal;
+          &:before {
+            content: '(';
+          }
+          &:after {
+            content: ')';
+          }
+        }
+      }
+    }
+  }
+  &__works {
+    margin: 0;
+    > ul {
+      margin: 0;
+      padding: 0;
+      list-style: none;
+      display: flex;
+      flex-wrap: wrap;
+      li {
+        width: 100%;
+        padding: 0 0 20px;
+        box-sizing: border-box;
+      }
+      figure {
+        position: relative;
+        margin: 0;
+        width: 100%;
+        height: 72vw;
+        overflow: hidden;
+        background: #f1f1f1;
+        img {
+          position: absolute;
+          left: 50%;
+          top: 50%;
+          display: block;
+          width: 100%;
+          transform: translate(-50%, -50%) scale(1);
+          transform-origin: 50% 50%;
+          transition: transform 200ms ease-out 50ms;
+          @supports (object-fit: cover) {
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            transform: scale(1);
+          }
+        }
+        &:active {
+          img {
+            transform: scale(1.05);
+          }
+        }
+      }
+      div {
+        padding: 12px 20px 0;
+        text-align: center;
+        strong {
+          display: block;
+          font-size: .875rem;
+          color: $color-text-base;
+          font-weight: 600;
+          line-height: 1.25;
+          @include text-single-line();
+        }
+        span {
+          display: block;
+          margin: 1px 0 0;
+          font-family: $font-circular;
+          font-size: .625rem;
+          color: #999;
+          em {
+            font-style: normal;
+            &:nth-child(n+2) {
+              &:before {
+                content: ' / ';
+              }
+            }
+          }
+        }
+      }
+      a {
+        display: block;
+        text-decoration: none;
+        padding: 0 0 10px;
+        -webkit-tap-highlight-color: transparent;
+      }
+    }
 
-		@include responsive(mobile-large) {
-			> ul {
-				margin: 0 -10px;
-				li {
-					width: 50%;
-					padding: 0 10px 20px;
-				}
-				figure {
-					height: 28vw;
-				}
-				div {
-					padding: 10px 0 0;
-					text-align: left;
-				}
-			}
-		}
-		@include responsive(tablet) {
-			max-width: $size-container-max;
-			margin: 30px auto 0;
-			> ul {
-				figure {
-					box-sizing: border-box;
-					height: 28vw;
-					overflow: hidden;
-					transform: translateZ(0);
-					img {
-						transition: transform 300ms ease-out;
-						transform-origin: 50% 50%;
-						backface-visibility: hidden;
-					}
-					&:hover {
-						img {
-							transform: scale(1.1) translate(-45%, -45%);
-							@supports (object-fit: cover) {
-								transform: scale(1.1);
-							}
-						}
-					}
-				}
-			}
-		}
-		@include responsive(desktop) {
-			> ul {
-				li {
-					width: 25%;
-				}
-				figure {
-					height: 15vw;
-					max-height: 200px;
-				}
-			}
-		}
-		@include responsive(max) {
-			> ul {
-				li {
-					width: 20%;
-				}
-				figure {
-					height: 15vw;
-					max-height: 200px;
-				}
-			}
-		}
-	}
-	&__paginate {
-		$size: 38px;
-		margin: 10px 0 0;
-		nav {
-			align-items: center;
-			justify-content: center;
-			strong,
-			a {
-				display: flex;
-				align-items: center;
-				justify-content: center;
-				width: $size;
-				height: $size;
-				font-family: $font-circular;
-				font-size: 13px;
-				color: $color-text-base;
-				font-weight: 500;
-				box-sizing: border-box;
-			}
-			a {
-				text-decoration: none;
-				-webkit-tap-highlight-color: transparent;
-				&:active {
-					background: #ddd;
-					border-radius: 2px;
-				}
-			}
-			strong {
-				color: $color-key;
-			}
-			.prev,
-			.next {
-				font-size: 0;
-				&:before {
-					content: '';
-					display: block;
-					width: 24px;
-					height: 24px;
-					background-repeat: no-repeat;
-					background-position: 50% 50%;
-				}
-			}
-			.prev:before {
-				background-image: url('../images/ico-prev.svg');
-			}
-			.next:before {
-				background-image: url('../images/ico-next.svg');
-			}
-		}
-		.mobile {
-			display: flex;
-		}
-		.desktop {
-			display: none;
-		}
+    @include responsive(mobile-large) {
+      > ul {
+        margin: 0 -10px;
+        li {
+          width: 50%;
+          padding: 0 10px 20px;
+        }
+        figure {
+          height: 28vw;
+        }
+        div {
+          padding: 10px 0 0;
+          text-align: left;
+        }
+      }
+    }
+    @include responsive(tablet) {
+      max-width: $size-container-max;
+      margin: 30px auto 0;
+      > ul {
+        figure {
+          box-sizing: border-box;
+          height: 28vw;
+          overflow: hidden;
+          transform: translateZ(0);
+          img {
+            transition: transform 300ms ease-out;
+            transform-origin: 50% 50%;
+            backface-visibility: hidden;
+          }
+          &:hover {
+            img {
+              transform: scale(1.1) translate(-45%, -45%);
+              @supports (object-fit: cover) {
+                transform: scale(1.1);
+              }
+            }
+          }
+        }
+      }
+    }
+    @include responsive(desktop) {
+      > ul {
+        li {
+          width: 25%;
+        }
+        figure {
+          height: 15vw;
+          max-height: 200px;
+        }
+      }
+    }
+    @include responsive(max) {
+      > ul {
+        li {
+          width: 20%;
+        }
+        figure {
+          height: 15vw;
+          max-height: 200px;
+        }
+      }
+    }
+  }
+  &__paginate {
+    $size: 38px;
+    margin: 10px 0 0;
+    nav {
+      align-items: center;
+      justify-content: center;
+      strong,
+      a {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: $size;
+        height: $size;
+        font-family: $font-circular;
+        font-size: 13px;
+        color: $color-text-base;
+        font-weight: 500;
+        box-sizing: border-box;
+      }
+      a {
+        text-decoration: none;
+        -webkit-tap-highlight-color: transparent;
+        &:active {
+          background: #ddd;
+          border-radius: 2px;
+        }
+      }
+      strong {
+        color: $color-key;
+      }
+      .prev,
+      .next {
+        font-size: 0;
+        svg {
+          display: block;
+        }
+      }
+    }
+    .mobile {
+      display: flex;
+    }
+    .desktop {
+      display: none;
+    }
 
-		@include responsive(tablet) {
-			margin: 10px 0 0;
-			.mobile {
-				display: none;
-			}
-			.desktop {
-				display: flex;
-			}
-		}
-	}
-	&__empty {
-		padding: 50px 0;
-		img {
-			width: 180px;
-			max-width: 100%;
-			display: block;
-			margin: 0 auto;
-		}
-		p {
-			margin: 30px 0 0;
-			text-align: center;
-			font-size: 1rem;
-			font-weight: 600;
-		}
-	}
+    @include responsive(tablet) {
+      margin: 10px 0 0;
+      .mobile {
+        display: none;
+      }
+      .desktop {
+        display: flex;
+      }
+    }
+  }
+  &__empty {
+    padding: 50px 0;
+    img {
+      width: 180px;
+      max-width: 100%;
+      display: block;
+      margin: 0 auto;
+    }
+    p {
+      margin: 30px 0 0;
+      text-align: center;
+      font-size: 1rem;
+      font-weight: 600;
+    }
+  }
 
-	@include responsive(mobile-large) {
-		padding: 0 $size-side-padding;
-	}
-	@include responsive(tablet) {
-		margin-top: 50px;
-		padding: 0 $size-side-padding-desktop + 20px;
-	}
-	@include responsive(desktop) {
-		padding: 0 $size-side-padding-desktop;
-	}
+  @include responsive(mobile-large) {
+    padding: 0 $size-side-padding;
+  }
+  @include responsive(tablet) {
+    margin-top: 50px;
+    padding: 0 $size-side-padding-desktop + 20px;
+  }
+  @include responsive(desktop) {
+    padding: 0 $size-side-padding-desktop;
+  }
+  @include dark-mode() {
+    &__header {
+      > h2 {
+        color: #fff;
+      }
+    }
+    &__categories {
+      button {
+        background: mix(#000, $color-dark-bg, 25%);
+        em {
+          color: $color-dark-text-base;
+        }
+        svg {
+          color: #999;
+        }
+      }
+      &.open {
+        button {
+          background: mix(#000, $color-dark-bg, 50%);
+        }
+        nav {
+          background: mix(#000, $color-dark-bg, 25%);
+          li {
+            a {
+              color: $color-dark-text-base;
+            }
+            &.on {
+              a {
+                color: $color-dark-key;
+              }
+            }
+          }
+        }
+      }
+    }
+    &__works {
+      > ul {
+        div {
+          strong {
+            color: $color-dark-text-base;
+          }
+          span {
+            color: #666;
+          }
+        }
+      }
+    }
+    &__paginate {
+      nav {
+        a {
+          color: $color-dark-text-base;
+          &:active {
+            background: mix($color-dark-bg, #000, 75%);
+          }
+        }
+      }
+    }
+
+    @include responsive(tablet) {
+      &__categories {
+        nav,
+        &.open nav {
+          background: none;
+          a {
+            color: $color-dark-text-base;
+          }
+        }
+      }
+    }
+  }
 }
