--- a/assets/scss/libs/mixins.scss
+++ b/assets/scss/libs/mixins.scss
@@ -3,49 +3,54 @@
 // responsive
 @mixin responsive($range)
 {
-	@if $range == mobile-large
-	{
-		@media (min-width: 480px) { @content; }
-	}
-	@else if $range == tablet
-	{
-		@media (min-width: #{$size-screen-tablet}) { @content; }
-	}
-	@else if $range == desktop
-	{
-		@media (min-width: #{$size-screen-desktop}) { @content; }
-	}
-	@else if $range == max
-	{
-		@media (min-width: #{$size-container-max}) { @content; }
-	}
+  @if $range == mobile-large
+  {
+    @media (min-width: 480px) { @content; }
+  }
+  @else if $range == tablet
+  {
+    @media (min-width: #{$size-screen-tablet}) { @content; }
+  }
+  @else if $range == desktop
+  {
+    @media (min-width: #{$size-screen-desktop}) { @content; }
+  }
+  @else if $range == max
+  {
+    @media (min-width: #{$size-container-max}) { @content; }
+  }
 }
 
 // retina display
 @mixin retina()
 {
-	@media (-webkit-min-device-pixel-ratio: 2) { @content; }
+  @media (-webkit-min-device-pixel-ratio: 2) { @content; }
 }
 
 // single line text
 @mixin text-single-line()
 {
-	white-space: nowrap;
-	overflow: hidden;
-	text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 // gradient
 @mixin color-linear-gradient($matt-color, $start, $end, $direction:'vertical')
 {
-	background: $matt-color;
+  background: $matt-color;
 
-	@if $direction == 'horizontal'
-	{
-		background: linear-gradient(to right, $start, $end);
-	}
-	@else
-	{
-		background: linear-gradient(to bottom, $start, $end);
-	}
+  @if $direction == 'horizontal'
+  {
+    background: linear-gradient(to right, $start, $end);
+  }
+  @else
+  {
+    background: linear-gradient(to bottom, $start, $end);
+  }
+}
+
+// dark mode
+@mixin dark-mode() {
+  @media (prefers-color-scheme: dark) { @content; }
 }
